Fix issue with order modal on mobile

--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -1,5 +1,5 @@
 .Modal {
-    position: fixed;
+    position: absolute;
     z-index: 500;
     background-color: white;
     width: 70%;
@@ -14,5 +14,9 @@
   @media (min-width: 600px) {
     width: 500px;
     left: calc(50% - 250px);
+  }
+
+  @media (max-height: 600px) {
+    top: 10%;
   }
 }
